Bug 415163 - "GTK location bar drop-down button arrow is misaligned" [p=frnchfrgg-mozbugs@altern.org (RIVAUD Julien [_FrnchFrgg_]) r=Ryan r=twanno r=Ventron sr=roc a1.9=beltzner]
UltraBlame original commit: 5b320fea694a186ee2967b910f85a5fa40f14a75

--- a/browser/themes/gnomestripe/browser/browser.css
+++ b/browser/themes/gnomestripe/browser/browser.css
@@ -950,7 +950,7 @@ toolbar[iconsize="small"] #paste-button[disabled="true"] {
 #autocomplete-security-wrapper {
   
   direction: ltr;
-  -moz-box-align: center;
+  -moz-box-align: stretch;
   
   margin-right: -3px;
 }
